[gd_scene load_steps=7 format=3 uid="uid://bho251jfd673i"]

[ext_resource type="Script" path="res://scripts/ui/main.gd" id="1_7l160"]
[ext_resource type="Texture2D" uid="uid://3mifqk1c2ic3" path="res://assets/UI/Title.png" id="2_cflg0"]
[ext_resource type="AudioStream" uid="uid://cjq6mt8wdij7u" path="res://assets/audio/sfx/bop.mp3" id="2_ja5u1"]
[ext_resource type="PackedScene" uid="uid://d1a3wnx2wk3ms" path="res://scenes/ui/options.tscn" id="3_fy3ta"]
[ext_resource type="Theme" uid="uid://84plhwxqoe37" path="res://assets/UI/ui_theme.tres" id="4_0cg5a"]
[ext_resource type="Theme" uid="uid://kgtpsi6v0g3v" path="res://assets/UI/close.tres" id="6_a81vt"]

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("1_7l160")

[node name="Title" type="TextureRect" parent="."]
custom_minimum_size = Vector2(1000, 0)
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -309.0
offset_top = 100.0
offset_right = 1739.0
offset_bottom = 618.0
grow_horizontal = 2
scale = Vector2(0.3, 0.3)
texture = ExtResource("2_cflg0")
expand_mode = 3

[node name="ColorRect" type="ColorRect" parent="."]
z_index = -1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
color = Color(0.8, 0.619608, 1, 1)

[node name="Bop" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_ja5u1")
bus = &"Effects"

[node name="Center" type="CenterContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -221.5
offset_top = -240.0
offset_right = 221.5
offset_bottom = 260.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 3

[node name="Buttons" type="VBoxContainer" parent="Center"]
layout_mode = 2
theme = ExtResource("4_0cg5a")

[node name="Continue" type="Button" parent="Center/Buttons"]
layout_mode = 2
disabled = true
text = "Continue"

[node name="NewGame" type="Button" parent="Center/Buttons"]
layout_mode = 2
text = "New Game"

[node name="Options" type="Button" parent="Center/Buttons"]
layout_mode = 2
text = "Options"

[node name="Credits" type="Button" parent="Center/Buttons"]
layout_mode = 2
text = "Credits"

[node name="ExitGame" type="Button" parent="Center/Buttons"]
layout_mode = 2
text = "Exit Game"

[node name="Options" type="VBoxContainer" parent="Center"]
visible = false
layout_mode = 2

[node name="Options" parent="Center/Options" instance=ExtResource("3_fy3ta")]
layout_mode = 2

[node name="Close" type="Button" parent="Center/Options"]
layout_mode = 2
theme = ExtResource("6_a81vt")
text = "Close"

[node name="Credits" type="VBoxContainer" parent="Center"]
visible = false
layout_mode = 2

[node name="VScrollBar" type="ScrollContainer" parent="Center/Credits"]
custom_minimum_size = Vector2(0, 300)
layout_mode = 2
theme = ExtResource("4_0cg5a")
horizontal_scroll_mode = 0
vertical_scroll_mode = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Center/Credits/VScrollBar"]
layout_mode = 2

[node name="Team" type="Label" parent="Center/Credits/VScrollBar/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Team JMSVY Super Cool Group 14"
horizontal_alignment = 1

[node name="Members" type="HBoxContainer" parent="Center/Credits/VScrollBar/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Name" type="Label" parent="Center/Credits/VScrollBar/VBoxContainer/Members"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "Mert Demirsü
Simon Hocker
Vilhelm Norström
Julia Wang
Yifan Wu"

[node name="Role" type="Label" parent="Center/Credits/VScrollBar/VBoxContainer/Members"]
layout_mode = 2
text = "Developer
Developer
Developer, Music
Developer, UI Artist
Art Director, Character Design"

[node name="Assets" type="Label" parent="Center/Credits/VScrollBar/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Assets & Tools"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AssetList" type="HBoxContainer" parent="Center/Credits/VScrollBar/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Name" type="Label" parent="Center/Credits/VScrollBar/VBoxContainer/AssetList"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "Mystic Woods
TexturePacker"

[node name="Link" type="Label" parent="Center/Credits/VScrollBar/VBoxContainer/AssetList"]
layout_mode = 2
text = "https://game-endeavor.itch.io/mystic-woods
https://www.codeandweb.com/texturepacker"

[node name="Close" type="Button" parent="Center/Credits"]
layout_mode = 2
theme = ExtResource("6_a81vt")
text = "Close"

[node name="Version" type="Label" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -45.0
offset_right = 295.0
offset_bottom = -22.0
grow_vertical = 0
mouse_filter = 1
text = "ver 0.6"

[connection signal="focus_entered" from="Center/Buttons/Continue" to="." method="_on_mouse_entered"]
[connection signal="mouse_entered" from="Center/Buttons/Continue" to="." method="_on_mouse_entered"]
[connection signal="pressed" from="Center/Buttons/Continue" to="." method="_on_continue_pressed"]
[connection signal="focus_entered" from="Center/Buttons/NewGame" to="." method="_on_mouse_entered"]
[connection signal="mouse_entered" from="Center/Buttons/NewGame" to="." method="_on_mouse_entered"]
[connection signal="pressed" from="Center/Buttons/NewGame" to="." method="_on_new_game_pressed"]
[connection signal="focus_entered" from="Center/Buttons/Options" to="." method="_on_mouse_entered"]
[connection signal="mouse_entered" from="Center/Buttons/Options" to="." method="_on_mouse_entered"]
[connection signal="pressed" from="Center/Buttons/Options" to="." method="_on_options_pressed"]
[connection signal="focus_entered" from="Center/Buttons/Credits" to="." method="_on_mouse_entered"]
[connection signal="mouse_entered" from="Center/Buttons/Credits" to="." method="_on_mouse_entered"]
[connection signal="pressed" from="Center/Buttons/Credits" to="." method="_on_credits_pressed"]
[connection signal="focus_entered" from="Center/Buttons/ExitGame" to="." method="_on_mouse_entered"]
[connection signal="mouse_entered" from="Center/Buttons/ExitGame" to="." method="_on_mouse_entered"]
[connection signal="pressed" from="Center/Buttons/ExitGame" to="." method="_on_exit_game_pressed"]
[connection signal="focus_entered" from="Center/Options/Close" to="." method="_on_mouse_entered"]
[connection signal="mouse_entered" from="Center/Options/Close" to="." method="_on_mouse_entered"]
[connection signal="pressed" from="Center/Options/Close" to="." method="_close_screens"]
[connection signal="focus_entered" from="Center/Credits/Close" to="." method="_on_mouse_entered"]
[connection signal="mouse_entered" from="Center/Credits/Close" to="." method="_on_mouse_entered"]
[connection signal="pressed" from="Center/Credits/Close" to="." method="_close_screens"]
